Fix test summary overflow bug (#2958)
* Start experimenting with ways to resolve this UI glitch

* Add overflow auto on `code run` test block

--- a/app/css/components/test-run.css
+++ b/app/css/components/test-run.css
@@ -231,7 +231,7 @@
                     @apply font-bold text-darkGray uppercase leading-huge mb-8;
                 }
                 & pre {
-                    @apply bg-backgroundColorB py-16 px-20 whitespace-pre-wrap rounded-8;
+                    @apply bg-backgroundColorB py-16 px-20 whitespace-pre-wrap overflow-y-auto rounded-8;
                 }
             }
         }
